prepare for gfile

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Flappy Bird</title>
     <script src="playcanvas-stable.min.js"></script>
     <script>
-        ASSET_PREFIX = "https://emulatoros.github.io/flappy/";
-        SCRIPT_PREFIX = "https://emulatoros.github.io/flappy/";
+        ASSET_PREFIX = "https://emulatoros.github.io/gfile/flappy/";
+        SCRIPT_PREFIX = "https://emulatoros.github.io/gfile/flappy/";
         SCENE_PATH = "404993.json";
         CONTEXT_OPTIONS = {
             'antialias': true,
